--- a/src/style.css
+++ b/src/style.css
@@ -1,1 +1,27 @@
-@import "tailwindcss"
+@import "tailwindcss";
+
+@layer base {
+	.error {
+		@apply text-red-500 text-xs block mb-2;
+	}
+
+	.invalid {
+		@apply border border-red-500;
+	}
+
+	.form {
+		@apply p-2 flex flex-col max-w-11/12 sm:max-w-2/3 md:max-w-1/2 lg:max-w-1/3 xl:max-w-1/4 text-center space-y-1 sm:mx-auto lg:mx-0 border m-2 rounded-xl bg-gray-200 mx-auto;
+	}
+
+	.input-field {
+		@apply border rounded-lg w-11/12 mx-auto p-1 bg-white;
+	}
+
+	.input-text {
+		@apply text-lg p-1;
+	}
+
+	.submit-btn {
+		@apply border bg-gray-400 hover:bg-gray-200 rounded-xl p-2 max-w-20 mx-auto my-2;
+	}
+}
