--- a/src/style.css
+++ b/src/style.css
@@ -9,20 +9,16 @@
 		@apply border border-red-500;
 	}
 
-	.form {
-		@apply p-2 flex flex-col max-w-11/12 sm:max-w-2/3 md:max-w-1/2 lg:max-w-1/3 xl:max-w-1/4 text-center space-y-1 sm:mx-auto lg:mx-0 border m-2 rounded-xl bg-gray-200 mx-auto;
-	}
-
 	.input-field {
 		@apply border rounded-lg w-11/12 mx-auto p-1 bg-gray-50;
 	}
 
 	.input-text {
-		@apply text-lg p-1;
+		@apply text-lg text-center p-1;
 	}
 
 	.submit-btn {
-		@apply border bg-violet-400 hover:bg-violet-200 rounded-xl p-2 max-w-20 mx-auto my-2;
+		@apply border bg-violet-300 hover:bg-violet-200 rounded-xl p-2 max-w-20 mx-auto my-2;
 	}
 
 	#student-table {
@@ -46,11 +42,11 @@
 	}
 
 	main {
-		@apply flex flex-col md:flex-row justify-between space-y-4 md:space-x-4 p-3;
+		@apply flex flex-col md:flex-row justify-between space-y-4 md:space-x-4 md:mt-34 lg:mt-42.5 p-3;
 	}
 
 	#registration-form {
-		@apply w-11/12 sm:w-4/5 md:w-2/5 lg:w-1/4 border max-h-100 p-4 mx-auto md:mx-4;
+		@apply w-11/12 sm:w-4/5 md:w-2/5 lg:w-1/4 max-h-100 p-4 mx-auto md:mx-4;
 	}
 
 	#student-details {
@@ -75,5 +71,9 @@
 
 	.btn {
 		@apply w-8 hover:opacity-70 transition-opacity;
+	}
+
+	.description {
+		@apply text-center text-lg p-4 font-sans;
 	}
 }
